Resolved typecast error.